fix stock_price scrapping

--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,138 +10,13 @@
     "from variables import *\n",
     "from utils import parse_excel, read_pickle\n",
     "from glob import glob\n",
-    "from bs4 import BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<span class=\"snapshot__value-current realtime-push\" id=\"snapshot-value-fst-current-0\">\n",
-       " <span class=\"snapshot__value\" data-sg-realtime-push=\"\" data-sg-realtime-push-no-state-update=\"\" data-sg-realtime-push-start-listener=\"true\">\n",
-       " \t\t\t\t\t\t18,80\n",
-       " \t\t\t\t\t</span>\n",
-       " <span class=\"snapshot__value-unit\">PKT</span>\n",
-       " </span>]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stock_idx = 0\n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
-    "dict_stock_names = {\n",
-    "    0 : 'vdax-new-2m',\n",
-    "    1 : 'vstoxx'\n",
-    "    }\n",
-    "stock = dict_stock_names[stock_idx]\n",
-    "#accepted values for stock: , \n",
-    "headers = {\n",
-    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/116.0.0.0 Safari/537.36'\n",
-    "}\n",
-    "response = requests.get('https://www.finanzen.net/index/' + stock, headers=headers)\n",
-    "html = BeautifulSoup(response.content, 'html.parser')\n",
     "\n",
-    "aux = BeautifulSoup.findAll(html,id = 'snapshot-value-fst-current-0')\n",
-    "aux "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "This python script is used to compare the results of the python script with the excel files.\n",
-    "It also generates the pdf files for the results of the python script.\n",
-    "The function parse_excel is used to parse the excel files. Thefore the function parse_eurex is not tested by this script.\n",
-    "Requirements:\n",
-    "    - The excel files use version 9.00 format.\n",
-    "\"\"\"\n",
+    "summery_cols = ['Basis', 'Änderung', 'heute', 'last_day']\n",
     "\n",
     "# Sufixes used to read the excel files\n",
-    "dict_auswahl_sufix = {0 : \"\", 1 : \"STOXX_\"}\n",
-    "\n",
-    "# List of files to be read\n",
-    "list_files = glob(\"./excel_files/*.xlsm\")\n",
-    "\n",
-    "# List of files where the results of the python are not equal to the excel files\n",
-    "list_error_files = []\n",
-    "\n",
-    "for excel_path in  list_files: #['./excel_files/T_OI-Abfrage 2023-09-19 V9.00.xlsm']: \n",
-    "    print(f\"excel_path = {excel_path}\")\n",
-    "\n",
-    "    # Select the option based on the name of the excel file\n",
-    "    if \"stoxx\" in excel_path.lower():\n",
-    "        auswahl = 1\n",
-    "    else:\n",
-    "        auswahl = 0\n",
-    "\n",
-    "    # Use the function parse_excel to parse the excel file\n",
-    "    auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, nbd_dict, dict_prod_bus, stock_price, expiry, expiry_1, heute, list_email_send_selection, future_date_col = parse_excel(auswahl, excel_path)\n",
-    "    \n",
-    "\n",
-    "    # Read the results of the python script\n",
-    "    Summery_df, HedgeBedarf_df, HedgeBedarf1_df, Ueberhaenge_df, delta= hedge(auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, dict_prod_bus, stock_price, expiry, expiry_1, heute)\n",
-    "\n",
-    "\n",
-    "    # Generate the pdf files\n",
-    "    generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)\n",
-    "\n",
-    "\n",
-    "    # Select the columns to be compared\n",
-    "    summery_cols = ['Basis', 'Änderung', 'heute', 'last_day']\n",
-    "    Summery_df = Summery_df[summery_cols]\n",
-    "\n",
-    "    ################################## Read excel files ##################################\n",
-    "    HedgeBedarf_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}HedgeBedarf\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})\n",
-    "    del HedgeBedarf_excel['Unnamed: 1']\n",
-    "    \n",
-    "    HedgeBedarf1_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}HedgeBedarf+01\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})[['Basis', 'HedgeSum']]\n",
-    "\n",
-    "    Summery_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}Summery\",skiprows=8).iloc[:,[0,1,2,3]]\n",
-    "    Summery_excel.columns = summery_cols\n",
-    "    Summery_excel = Summery_excel[pd.to_numeric(Summery_excel.Basis, errors= 'coerce').notna()]\n",
-    "    ##########################################################################################\n",
-    "\n",
-    "    ############ Compare the results of the python script with the excel files ###############\n",
-    "    compare1_df = HedgeBedarf_df[['Basis', 'HedgeSum']].merge(HedgeBedarf_excel[['Basis', 'HedgeSum']], on = 'Basis',suffixes=('_py', '_excel'))\n",
-    "    # Biggest difference between python and excel\n",
-    "    (compare1_df.HedgeSum_py - compare1_df.HedgeSum_excel).abs().max()\n",
-    "    compare1_df['dif'] = (compare1_df.HedgeSum_py - compare1_df.HedgeSum_excel).abs()\n",
-    "    max_dif1  = compare1_df.dif.abs().max()\n",
-    "\n",
-    "    compare2_df = HedgeBedarf1_df[['Basis', 'HedgeSum']].merge(HedgeBedarf1_excel, on = 'Basis',suffixes=('_py', '_excel'))\n",
-    "    # Biggest difference between python and excel\n",
-    "    (compare2_df.HedgeSum_py - compare2_df.HedgeSum_excel).abs().max()\n",
-    "    compare2_df['dif'] = (compare2_df.HedgeSum_py - compare2_df.HedgeSum_excel).abs()\n",
-    "    max_dif2  = compare2_df.dif.abs().max()\n",
-    "\n",
-    "    compare3_df = Summery_excel.merge(Summery_df, on = 'Basis', suffixes = ('_excel', '_python'))\n",
-    "    ##########################################################################################\n",
-    "    \n",
-    "    list_max = []\n",
-    "    for col in Summery_df.columns[1:]:\n",
-    "        list_max.append((compare3_df[f'{col}_excel'] - compare3_df[f'{col}_python']).abs().max())\n",
-    "\n",
-    "    max_dif3 = max(list_max)\n",
-    "\n",
-    "\n",
-    "    if max(max_dif1, max_dif2, max_dif3) > 1e-6:\n",
-    "        list_error_files.append(excel_path)\n",
-    "        print(\"Excel and python results are not the same\")\n",
-    "    print(\"Both files are the same.\")   \n",
-    "\n",
-    "\n",
-    "print(list_error_files)"
+    "dict_auswahl_sufix = {0 : \"\", 1 : \"STOXX_\"}"
    ]
   },
   {
@@ -163,6 +38,101 @@
     "\n",
     "generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This python script is used to compare the results of the python script with the excel files.\n",
+    "It also generates the pdf files for the results of the python script.\n",
+    "The function parse_excel is used to parse the excel files. Thefore the function parse_eurex is not tested by this script.\n",
+    "Requirements:\n",
+    "    - The excel files use version 9.00 format.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "# List of files to be read\n",
+    "list_files = glob(\"./excel_files/*.xlsm\")\n",
+    "\n",
+    "# List of files where the results of the python are not equal to the excel files\n",
+    "list_error_files = []\n",
+    "\n",
+    "for excel_path in list_files:#['./excel_files\\\\T_OI-Abfrage 2023-10-27 V9.00.xlsm']: \n",
+    "    if \"~\" in excel_path:\n",
+    "        continue\n",
+    "    is_diff = False\n",
+    "    print(f\"excel_path = {excel_path}\")\n",
+    "\n",
+    "    # Select the option based on the name of the excel file\n",
+    "    if \"stoxx\" in excel_path.lower():\n",
+    "        auswahl = 1\n",
+    "    else:\n",
+    "        auswahl = 0\n",
+    "\n",
+    "    # Use the function parse_excel to parse the excel file\n",
+    "    auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, nbd_dict, dict_prod_bus, stock_price, expiry, expiry_1, heute, list_email_send_selection, future_date_col = parse_excel(auswahl, excel_path)\n",
+    "\n",
+    "\n",
+    "    # Read the results of the python script\n",
+    "    Summery_df, HedgeBedarf_df, HedgeBedarf1_df, Ueberhaenge_df, delta= hedge(auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, dict_prod_bus, stock_price, expiry, expiry_1, heute)\n",
+    "\n",
+    "    # Generate the pdf files\n",
+    "    #generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)\n",
+    "\n",
+    "    # Select the columns to be compared\n",
+    "    Summery_df = Summery_df[summery_cols]\n",
+    "\n",
+    "    ################################## Read excel files ##################################\n",
+    "    HedgeBedarf_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}HedgeBedarf\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})\n",
+    "    del HedgeBedarf_excel['Unnamed: 1']\n",
+    "    \n",
+    "    HedgeBedarf1_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}HedgeBedarf+01\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})[['Basis', 'HedgeSum']]\n",
+    "\n",
+    "    Summery_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}Summery\",skiprows=8).iloc[:,[0,1,2,3]]\n",
+    "    Summery_excel.columns = summery_cols\n",
+    "    Summery_excel = Summery_excel[pd.to_numeric(Summery_excel.Basis, errors= 'coerce').notna()]\n",
+    "    ##########################################################################################\n",
+    "\n",
+    "    ############ Compare the results of the python script with the excel files ###############\n",
+    "    compare1_df = HedgeBedarf_df[['Basis', 'HedgeSum']].merge(HedgeBedarf_excel[['Basis', 'HedgeSum']], on = 'Basis',suffixes=('_py', '_excel'))\n",
+    "    # Biggest difference between python and excel\n",
+    "    compare1_df['dif'] = (compare1_df.HedgeSum_py / (compare1_df.HedgeSum_excel+ 1e-6)).abs()\n",
+    "    max_dif1  = 1 - compare1_df.dif.abs().max()\n",
+    "\n",
+    "    compare2_df = HedgeBedarf1_df[['Basis', 'HedgeSum']].merge(HedgeBedarf1_excel, on = 'Basis',suffixes=('_py', '_excel'))\n",
+    "    # Biggest difference between python and excel\n",
+    "    (compare2_df.HedgeSum_py - compare2_df.HedgeSum_excel).abs().max()\n",
+    "    compare2_df['dif'] = (compare2_df.HedgeSum_py / (compare2_df.HedgeSum_excel+ 1e-6)).abs()\n",
+    "    max_dif2  = 1 - compare2_df.dif.abs().max()\n",
+    "\n",
+    "    compare3_df = Summery_excel.merge(Summery_df, on = 'Basis', suffixes = ('_excel', '_python'))\n",
+    "    ##########################################################################################\n",
+    "\n",
+    "    list_max = []\n",
+    "    for col in Summery_df.columns[1:]:\n",
+    "        list_max.append((compare3_df[f'{col}_excel'] / (compare3_df[f'{col}_python']+ 1e-6) ).abs().max())\n",
+    "\n",
+    "    max_dif3 = 1 - max(list_max)\n",
+    "\n",
+    "    diffs = np.abs(np.array([max_dif1, max_dif2, max_dif3])) \n",
+    "\n",
+    "    if diffs.max() > 0.05:\n",
+    "        list_error_files.append(excel_path)\n",
+    "        print(\"Excel and python results are not the same\")\n",
+    "        is_diff = True\n",
+    "    \n",
+    "    if not is_diff:\n",
+    "        print(\"Both files are the same. \", end = \"\")\n",
+    "    values_compared = min(compare2_df.shape[0],compare2_df.shape[0],compare2_df.shape[0])\n",
+    "    print(f\"{values_compared} values compared\")\n",
+    "\n",
+    "\n",
+    "print(list_error_files)"
+   ]
   }
  ],
  "metadata": {
@@ -181,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.4 | packaged by Anaconda, Inc. | (main, Jul  5 2023, 13:47:18) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
