--- a/email.ipynb
+++ b/email.ipynb
@@ -103,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17 (main, Jul  5 2023, 21:22:06) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
