--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import *\n",
     "from variables import *\n",
-    "from utils import parse_excel, read_pickle\n",
     "from glob import glob\n",
     "from bs4 import BeautifulSoup\n",
-    "\n",
     "\n",
     "summery_cols = ['Basis', 'Änderung', 'heute', 'last_day']\n",
     "\n",
@@ -35,9 +33,82 @@
     "auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, nbd_dict, dict_prod_bus, stock_price, expiry, expiry_1, heute, list_email_send_selection, future_date_col = result\n",
     "\n",
     "Summery_df, HedgeBedarf_df, HedgeBedarf1_df, Ueberhaenge_df, delta= hedge(auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, dict_prod_bus, stock_price, expiry, expiry_1, heute)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1050 1050\n",
+      "1050 1050\n",
+      "1050 1050\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "No active exception to reraise",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[83], line 418\u001b[0m\n\u001b[0;32m    414\u001b[0m         converter\u001b[39m.\u001b[39mconvert(\u001b[39m\"\u001b[39m\u001b[39mfile://\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mgetcwd(),result_html), file_path)\n\u001b[0;32m    416\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPDF has been generated.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 418\u001b[0m generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)\n",
+      "Cell \u001b[1;32mIn[83], line 410\u001b[0m, in \u001b[0;36mgenerate_pdfs\u001b[1;34m(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)\u001b[0m\n\u001b[0;32m    407\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(result_html,\u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m    408\u001b[0m     file\u001b[39m.\u001b[39mwrite(template)\n\u001b[1;32m--> 410\u001b[0m \u001b[39mraise\u001b[39;00m\n\u001b[0;32m    411\u001b[0m pdf_suffix \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mcomplete\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbasic\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39m_basic\u001b[39m\u001b[39m\"\u001b[39m}[pdf_format]\n\u001b[0;32m    412\u001b[0m file_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(current_results_path, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mdict_index_stock[auswahl]\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mheute\u001b[39m.\u001b[39mstrftime(\u001b[39m'\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m%\u001b[39m\u001b[39mm_\u001b[39m\u001b[39m%\u001b[39m\u001b[39mY\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mpdf_suffix\u001b[39m}\u001b[39;00m\u001b[39m.pdf\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: No active exception to reraise"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "\n",
     "generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'header_height' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[55], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m header_height\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'header_height' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "header_height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minkurs = 14000.0\n",
+      "Maxkurs = 16000.0\n",
+      "Schritte = 40\n",
+      "volatility_Laufzeit = 60\n",
+      "Tage = 16\n",
+      "Tage_1 = 43\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -131,7 +202,8 @@
     "    print(f\"{values_compared} values compared\")\n",
     "\n",
     "\n",
-    "print(list_error_files)"
+    "print(list_error_files)\n",
+    "\n"
    ]
   }
  ],
@@ -151,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.4 | packaged by Anaconda, Inc. | (main, Jul  5 2023, 13:47:18) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
